Correçao: correçao e otimizaçao de tela

--- a/app.json
+++ b/app.json
@@ -19,13 +19,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.AppSRG"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-sqlite"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "f0c06820-b1b4-4d04-9db8-b30a26c59a47"
+      }
+    }
   }
 }
